tests/baselines/reference/exportSpecifierReferencingOuterDeclaration2.errors.txt
exportSpecifierReferencingOuterDeclaration2_A.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
exportSpecifierReferencingOuterDeclaration2_B.ts(1,10): error TS2661: Cannot export 'X'. Only local declarations can be exported from a module.


==== exportSpecifierReferencingOuterDeclaration2_A.ts (1 errors) ====
    declare module X { export interface bar { } }
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
==== exportSpecifierReferencingOuterDeclaration2_B.ts (1 errors) ====
    export { X };
             ~
!!! error TS2661: Cannot export 'X'. Only local declarations can be exported from a module.
    export declare function foo(): X.bar;